--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@ html {
 
 body {
   background-color: rgb(245, 247, 249);
-  font-family: 'Open Sans';
   display: flex;
   overflow: hidden;
   font-size: 1.6rem;
+  margin: 0;
 }
 
 #root {
