--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,10 @@
-html {
-  height: 100%;
-  font-size: 10px;
-}
-
+html,
 body {
-  background-color: rgb(245, 247, 249);
-  display: flex;
-  overflow: hidden;
-  font-size: 1.6rem;
-  margin: 0;
+  margin: 0px;
+  height: 100%;
+  background-color: black;
 }
 
 #root {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
+  height: 100%;
 }
